$Rev$
[2008/01/09]
ShellWindow.py      Fix popup menu creation too late, so the UpdateUI will raise exception
Editor.py           Also change popup menu creation position
HtmlPage.py         Fix GTK platform display bug

[2008/01/07]
OutlineBrowser.py   Fix unicode convert bug

[2008/01/05]
PCInfo.py MainFrame.py MyStatusBar.py
                    Add linux platform memory display on the statusbar
                    
[2008/01/04]
mFormat.py mIndentMove.py
                    Add indent cursor move functionality
mClassBrowser.py OutlineBrowser.py
                    Improve python class browser
CodeSnippet.py      Fix InsertItemBefore bug

[2008/01/02]
mWindow.py mHotKey.py
                    Fix custom hotkey error
SvnSettings.py      Fix svn bug
DirBrowser.py       Fix ignore bug

[2007/12/25]
DirBrowser.py       Add F5(Refresh) support.
mPyRun.py           Binding F5 to editor but not MainFrame
CodeSnippet.py mCodeSnippet.py
                    Improve xml reading with threading, and change the tooltip

[2007/12/23]
CodeSnippet.py mCodeSnippet.py
                    Add new snippet
                    
[2007/12/19]
php.acp             add php.acp thanks for 魏振 <etggy@163.com>

[2007/12/18]
canvas_test_plugin  Add Canvas Test plugin, you can directly test DC api

-------------------------------------- 3.9 -----------------------------
[2007/12/12]
common.py           Fix webopen twice open bug
Version.py          change 3.8 to 3.9

-------------------------------------- 3.8.1 -----------------------------
[2007/12/12]
UliPad.py           Remove profile invoke

[2007/12/11]
SvnSupport.py       fix checkout folder spell mistake bug

[2007/12/08]
DirBrowser.py mDirBrowser.py
                    Remember the last add path folder
                    
-------------------------------------- 3.8 -----------------------------
[2007/12/06]
DirBrowser.py       Fix add new directory, when opened if there are children nodes,