@@ -52,9 +52,7 @@ def editor_init(win):
     win.syntax_info = None
     win.auto_routin = None
     win.snippet = None
-#    win.dont_analysis = False
-    
-#    win.lock = thread.allocate_lock()
+    win.modified_line = None
 Mixin.setPlugin('editor', 'init', editor_init)
 
 def _replace_text(win, start, end, text):
@@ -136,12 +134,12 @@ def on_key_down(win, event):
     return False
 Mixin.setPlugin('editor', 'on_key_down', on_key_down)
 
-def on_key_down(win, event):
-    if win.pref.input_assistant:
-        win.mainframe.auto_routin_ac_action.put({'type':'normal', 'win':win, 
-            'event':event, 'on_char_flag':False})
-    return False
-Mixin.setPlugin('editor', 'on_key_down', on_key_down, nice=10)
+#def on_key_down(win, event):
+#    if win.pref.input_assistant:
+#        win.mainframe.auto_routin_ac_action.put({'type':'normal', 'win':win, 
+#            'event':event, 'on_char_flag':False})
+#    return False
+#Mixin.setPlugin('editor', 'on_key_down', on_key_down, nice=10)
 
 def pref_init(pref):
     pref.input_assistant = True
@@ -150,7 +148,7 @@ def pref_init(pref):
     pref.inputass_identifier = True
     pref.inputass_full_identifier = True
     pref.inputass_func_parameter_autocomplete = True
-    pref.inputass_typing_rate = 500
+    pref.inputass_typing_rate = 400
 Mixin.setPlugin('preference', 'init', pref_init)
 
 def add_pref(preflist):
@@ -308,8 +306,14 @@ def on_modified(win, event):
     type = event.GetModificationType()
     for flag in (wx.stc.STC_MOD_INSERTTEXT, wx.stc.STC_MOD_DELETETEXT):
         if flag & type:
-            win.mainframe.auto_routin_analysis.put(win)
-            return
+            modified_line = win.LineFromPosition(event.GetPosition())
+            if  win.modified_line is None:
+                win.modified_line = modified_line
+                win.mainframe.auto_routin_analysis.put(win)
+            else:
+                if  win.modified_line != modified_line or event.GetLinesAdded() != 0:
+                    win.modified_line = modified_line
+                    win.mainframe.auto_routin_analysis.put(win)
 Mixin.setPlugin('editor', 'on_modified', on_modified)
 
 from modules import AsyncAction
@@ -323,12 +327,6 @@ class InputAssistantAction(AsyncAction.AsyncAction):
         action = obj['type']
         win = obj['win']
         try:
-#            if Globals.mainframe.closeflag:
-#                return
-#            if not hasattr(Globals.mainframe, 'document'):
-#                return
-#            if win != Globals.mainframe.document:
-#                return
             if not win: return
             i = get_inputassistant_obj(win)
             win.lock.acquire()
@@ -349,12 +347,6 @@ class Analysis(AsyncAction.AsyncAction):
         if not self.empty:
             return
         try:
-#            if win.closeflag:
-#                return
-#            if not win.document:
-#                return
-#            if obj != win.document:
-#                return
             if not obj: return
             i = get_inputassistant_obj(obj)
             i.call_analysis(self)
